--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,47 @@
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
 .App {
   text-align: center;
 }
@@ -37,61 +81,207 @@
   }
 }
 
+body{
+  background-color: #f5f5f5;
+}
+
 .header a{
   text-decoration: none;
   color: #000;
   font-size: 30px;
 }
 
-.NavButton{
+.eventText{
   text-align: center;
-  background-color: #eee;
-  padding: 25px 0;
+  background-color: #00BCD4;
+  padding: 10.5px 0;
+  position: relative;
+  height: 48px;
+  font-size: 24px;
+  font-weight: 700;
+  width: 100%;
+  margin-top: 2px;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  position: relative;
+}
+
+.eventBack{
+  width: 36px;
+  height: 36px;
+  display: block;
+  padding: 6px 0 6px 11px;
+  margin-top: 6px;
+}
+
+.eventBack a{
+  text-decoration: none;
+  color: #393939;
+  font-family: 'Arial';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 41px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+}
+
+.eventText .eventTitle{
+  min-height: 27px;
+  line-height: 28px;
+  display: inline-block;
+  width: 300px;
+  position: absolute;
+  left: 50%;
+  margin-left: -150px;
+}
+
+.eventText::before{
+  content: "";
+  top: 0;
+  right: 0;
+  left: 0;
+  position: absolute;
+  background-color: #008BA3;
+  height: 16px;
+}
+
+.NavButton{
+  display: block;
+  position: absolute;
+  left: 50%;
+  margin-left: -187px;
+  margin-top: 21px;
+  text-align: center;
+  width: 374px;
+  height: 79px;
+  background-color: #00BCD4;
+  box-shadow: 6px 8px 12px rgba(0, 0, 0, 0.25);
+  border-radius: 16px;
+  position: relative;
 }
 
 .NavButton a{
   text-decoration: none;
-  color: #61dafb;
-  font-size: 25px;
+  color: #393939;
+  font-size: 24px;
+  line-height: 28px;
+  font-weight: 700;
+  padding: 26px 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-transform: uppercase;
 }
 
-.events div{
+.eventListContainer{
+  min-height: 236px;
+  margin-top: 19px;
+  padding: 17px 25px 24px 25px;
+  width: 810px;
+  margin: 0 auto;
+  background: #FFFFFF;
+  box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 8px;
+}
+
+.eventList{
+  width: 812px;
+  height: auto;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 23px;
+  color: #000 !important;
+}
+
+.eventBlock{
+  min-height: 36px;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  font-size: 20px;
+  line-height: 23px;
+  font-weight: 400;
+  margin-bottom: 6px;
+  background: #F5F5F6;
+  border: 1px solid #e5e5e5;
+  box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 8px;
+}
+
+.eventBlockDate{
+  width: 120px;
+  margin-right: 19px;
+  margin-left: 5px;
+}
+
+.eventBlockDescription{
+  width: 650px;
+}
+
+.eventMenu{
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0 25px;
+  margin-top: 18px;
 }
 
-.actionButton{
-  background-color: #eee;
-  padding: 25px 0;
-  text-align: center;
-  font-size: 25px;
-}
-
-.actionButton span{
+.clearEvent{
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 20px;
+  color: #393939;
+  background-color: #00BCD4;
+  box-shadow: 6px 8px 12px rgba(0, 0, 0, 0.25);
+  border-radius: 8px;
+  padding: 3px 26px;
+  text-transform: uppercase;
+  text-decoration: none;
   cursor: pointer;
-  color: #61dafb;
 }
 
-.eventInput .eventBlockDate{
-  padding-left: 25px;
-}
-
-.eventForm input{
-  padding: 5px 0;
-  width: 100%;
-  margin: 10px 25px;
+.addEvent{
+  cursor: pointer;
+  font-weight: 700;
+  font-size: 38px;
+  line-height: 44px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  color: #000000;
+  background: #FFE082;
+  border-radius: 27px;
+  width: 54px;
+  height: 54px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .editButton{
-  background-color: #eee;
-  padding:  25px 0;
-  text-align: center;
+  margin-left: 4px;
+  cursor: pointer;
 }
 
 .editButton span{
-  cursor: pointer;
-  font-size: 25px;
-  color: #61dafb;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 16px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  color: #000;
+  background: #FFE082;
+  border-radius: 27px;
+  padding: 4px 7px;
+}
+
+.eventForm input{
+  background: #FFFFFF;
+  border: 1px solid #E5E5E6;
+  border-radius: 4px;
+  width: 610px;
+  height: 24px;
 }
